# GW2TacO

./: .clang-format  .gitignore  BuildCount.h  BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  CMakeSettings.json  DungeonProgress.cpp  DungeonProgress.h  GW2API.cpp  GW2API.h  GW2Overlay.vcxproj  GW2Overlay.vcxproj.filters  GW2TacO.cpp  GW2TacO.h  GW2TacO.rc  GW2TacO.sln  HPGrid.cpp  HPGrid.h  Language.cpp  Language.h  LocationalTimer.cpp  LocationalTimer.h  MapTimer.cpp  MapTimer.h  MarkerEditor.cpp  MarkerEditor.h  MouseHighlight.cpp  MouseHighlight.h  MumbleLink.cpp  MumbleLink.h  Notepad.cpp  Notepad.h  OverlayApplication.cpp  OverlayApplication.h  OverlayConfig.cpp  OverlayConfig.h  OverlayWindow.cpp  OverlayWindow.h  ProFont.cpp  (+86 more)
.github/workflows/: build.yml  release.yml
Bedrock/BaseLib/: Archive.cpp  Archive.h  Array.h  Assert.h  BBox.cpp  BBox.h  BaseLib.h  BaseLib.vcxproj  BaseLib.vcxproj.filters  Color.cpp  Color.h  CrashTracker.cpp  CrashTracker.h  CriticalSection.cpp  CriticalSection.h  Dictionary.cpp  Dictionary.h  EnumHelpers.cpp  EnumHelpers.h  FileList.cpp  FileList.h  FloatControl.cpp  FloatControl.h  Hash.h  ImageDecompressor.cpp  ImageDecompressor.h  Line.cpp  Line.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  Memory.cpp  Memory.h  PRS.cpp  PRS.h  Plane.cpp  Plane.h  Profile.cpp  Profile.h  (+33 more)
Bedrock/CoRE2/: Atom.cpp  Atom.h  CoRE2.vcxproj  CoRE2.vcxproj.filters  ConstantBuffer.cpp  ConstantBuffer.h  Core2.cpp  Core2.h  Core2_Config.h  DDSTextureLoader.cpp  DDSTextureLoader.h  DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11Device.cpp  DX11Device.h  DX11Enums.cpp  DX11Enums.h  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11RenderState.cpp  DX11RenderState.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DX11VertexBuffer.cpp  DX11VertexBuffer.h  DX11VertexFormat.cpp  DX11VertexFormat.h  Device.cpp  Device.h  Enums.cpp  Enums.h  IndexBuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  ObjectGroup.cpp  ObjectGroup.h  (+14 more)
Bedrock/UtilLib/: PNGDecompressor.cpp  PNGDecompressor.h  SocketSSL.cpp  SocketSSL.h  UtilLib.vcxproj  UtilLib.vcxproj.filters  XMLDocument.cpp  XMLDocument.h  XMLNode.cpp  XMLNode.h
Bedrock/WhiteBoard/: WhiteBoard.vcxproj  WhiteBoard.vcxproj.filters
Bedrock/Whiteboard/: Application.cpp  Application.h  Atlas.cpp  Atlas.h  Box.cpp  Box.h  Button.cpp  Button.h  CSSItem.cpp  CSSItem.h  ContextMenu.cpp  ContextMenu.h  DrawAPI.cpp  DrawAPI.h  Font.cpp  Font.h  GuiItem.cpp  GuiItem.h  ItemSelector.cpp  ItemSelector.h  Label.cpp  Label.h  Message.cpp  Message.h  Root.cpp  Root.h  Skin.cpp  Skin.h  StyleManager.cpp  StyleManager.h  TextBox.cpp  TextBox.h  WhiteBoard.h  WhiteBoard.vcxproj  WhiteBoard.vcxproj.filters  Window.cpp  Window.h
CMake/: DefaultCXX.cmake
POIs/: GuildMission_Bounty_2Mult.xml  GuildMission_Bounty_BigMayana.xml  GuildMission_Bounty_BookwormBwikki.xml  GuildMission_Bounty_Brekkabek.xml  GuildMission_Bounty_Crusader_Michiele.xml  GuildMission_Bounty_Deputy_Brooke.xml  GuildMission_Bounty_Devious_Teesa.xml  GuildMission_Bounty_Diplomat_Tarban.xml  GuildMission_Bounty_Half_Baked_Komali.xml  GuildMission_Bounty_Poobadoo.xml  GuildMission_Bounty_Prisoner1141.xml  GuildMission_Bounty_Shaman_Arderus.xml  GuildMission_Bounty_Short_Fuse_Felix.xml  GuildMission_Bounty_Sotzz.xml  GuildMission_Bounty_Tricksy_Trekksa.xml  GuildMission_Bounty_Trillia_Midwell.xml  GuildMission_Bounty_Yanonka.xml  SAB_Bombs.xml  SAB_Dig_Locations.xml  SAB_EnvironmentalScience.xml  SAB_FluteDoor.xml  SAB_FurnitureShops.xml  SAB_Shops.xml  SAB_Tribulation.xml  collectibles_astudyingold.xml  collectibles_goldenlostbadges.xml  firecracker.xml  keyrequired_dragonsstand.xml  keyrequired_drytop.xml  keyrequired_silverwastes.xml  keyrequired_tangleddepths.xml  keyrequired_verdantbrink.xml  raid1_closure_achievement.xml  raid1_piecing_it_together_achievement.xml  raid1_salvationpass_markers.xml  raid1_scattered_memories.xml  raid1_spiritvale_markers.xml  raid1_stronghold_markers.xml  wintersday_orphan_locations.xml
src/: build_count.h.in  build_info.cpp  build_info.h  dungeon_progress.cpp  dungeon_progress.h  gw2_api.cpp  gw2_api.h  gw2_pois.cpp  gw2_taco.cpp  gw2_taco.h  gw2_tactical.cpp  gw2_tactical.h  hp_grid.cpp  hp_grid.h  language.cpp  language.h  locational_timer.cpp  locational_timer.h  map_timer.cpp  map_timer.h  marker_editor.cpp  marker_editor.h  mouse_highlight.cpp  mouse_highlight.h  mumble_link.cpp  mumble_link.h  notepad.cpp  notepad.h  overlay_application.cpp  overlay_application.h  overlay_config.cpp  overlay_config.h  overlay_window.cpp  overlay_window.h  pro_font.cpp  pro_font.h  raid_progress.cpp  raid_progress.h  range_display.cpp  range_display.h  (+13 more)
src/WhiteBoard/: WhiteBoard.vcxproj
src/base/: BaseLib.vcxproj  BaseLib.vcxproj.filters  Socket.cpp  Socket.h  assert.h  base_config.h  base_lib.h  color.cpp  color.h  crash_tracker.cpp  crash_tracker.h  critical_section.cpp  critical_section.h  enum_helpers.h  file_list.cpp  file_list.h  hasher.cpp  image_decompressor.cpp  logger.cpp  logger.h  matrix.cpp  matrix.h  memory.cpp  memory.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  random.cpp  random.h  read_file.cpp  rectangle.cpp  rectangle.h  ring_buffer.h  socket.cpp  socket.h  spec_math.cpp  spec_math.h  sphere.cpp  sphere.h  (+12 more)
src/core2/: CoRE2.vcxproj  CoRE2.vcxproj.filters  Texture.h  constant_buffer.cpp  constant_buffer.h  core2.cpp  core2.h  core2_config.h  device.cpp  device.h  dss_texture_loader.cpp  dss_texture_loader.h  dx11_constant_buffer.cpp  dx11_constant_buffer.h  dx11_device.cpp  dx11_device.h  dx11_enums.cpp  dx11_enums.h  dx11_index_buffer.cpp  dx11_index_buffer.h  dx11_render_state.cpp  dx11_render_state.h  dx11_shader.cpp  dx11_shader.h  dx11_texture.cpp  dx11_texture.h  dx11_vertex_buffer.cpp  dx11_vertex_buffer.h  dx11_vertex_format.cpp  dx11_vertex_format.h  enums.h  (+12 more)
src/util/: CMakeLists.txt  UtilLib.vcxproj  UtilLib.vcxproj.filters  jsonxx.cc  miniz.c  png_decompressor.cpp  png_decompressor.h  xml_document.cpp  xml_document.h  xml_node.cpp  xml_node.h
src/util/RapidXML/: rapidxml.hpp  rapidxml_print.hpp
(+36 files in other folders)
